# twosome

backend/: CHANGELOG.md  LICENSE  Twosome.cabal  flake.nix
frontend/: package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.js
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/: actions.ts  page.tsx
frontend/src/app/auth/callback/: route.ts
frontend/src/app/auth/confirm/: route.ts
frontend/src/app/private/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/restaurants/[id]/: page.tsx
frontend/src/auth/: email-auth.tsx  middleware.ts  provider-buttons.tsx  supabase.ts
frontend/src/components/common/: hashtag-list.tsx  hastagList.tsx  header.tsx
frontend/src/home/: fav-toggle.tsx  favToggle.tsx  restaurant-card.tsx  restaurant-list.tsx  restaurantCard.tsx  restaurantList.tsx
frontend/src/profile/: block-mute-manager.tsx  friend-actions.tsx  header.tsx  photo-gallery.tsx  privacy-setting.tsx  recent-activity.tsx  review-history.tsx  stats-card.tsx
frontend/src/restaurants/: action-bar.tsx  deep-resarch-links.tsx  hero-image.tsx  review-summary.tsx
frontend/supabase/: config.toml
