cabal-version:      3.14
name:               Twosome
version:            0.1.0.0
synopsis:           twosome backend written in haskell
-- description:
homepage:           github.com/bokutotu/twosome
license:            MIT
license-file:       LICENSE
author:             bokutotu
maintainer:         mushin.hudoushin@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   lib
    default-language: GHC2024

executable Twosome
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.0.0,
        Twosome

    hs-source-dirs:   app
    default-language: GHC2024

test-suite Twosome-test
    import:           warnings
    default-language: GHC2024
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        Twosome
